fixed h1 titles on ie7/8

--- a/public/stylesheets/style_ie.css
+++ b/public/stylesheets/style_ie.css
@@ -10,13 +10,13 @@
 	font:lighter #FFF 12px Arial;
 }
 
-#twitter_tweet { background: url(../images/twitter_tweet.png) no-repeat; position:absolute; left:630px; top:178px; width:30px; height:30px; display:block;}
+#twitter_tweet { background: url(../images/twitter_tweet.png) no-repeat; position:absolute; left:650px; top:178px; width:30px; height:30px; display:block;}
 
 .generic_page h1 {
 	color:#000;
 	font-family: "LaneNarrowRegular", Verdana, sans-serif;
 	font-size:18px;
 	position:relative;
-	top:7px;
+	top:0px;
 	padding-bottom:25px;
 }
